convert to worker API